Please enter the commit message for your changes. Lines starting   with ' ' will be ignored, and an empty message aborts the commit.
  On branch main
  Your branch is up to date with 'origin/main'.

  Changes to be committed:
 	modified:   .github/workflows/butterfly-e2e.yml
 	modified:   .github/workflows/perception-ci.yml
 	modified:   .github/workflows/perception-performance.yml
 	modified:   .github/workflows/plato-ci.yml
 	modified:   .github/workflows/security-scan.yml
 	new file:   .zap/api-rules.tsv
 	new file:   .zap/rules.tsv
 	modified:   DEVELOPMENT_OVERVIEW.md
 	new file:   docs/SECURITY_OVERVIEW.md
 	modified:   docs/api/api-catalog.md
 	new file:   docs/development/README.md
 	new file:   docs/development/ci-cd.md
 	new file:   docs/development/coding-standards.md
 	new file:   docs/development/contributing.md
 	new file:   docs/development/testing-strategy.md
 	new file:   docs/onboarding/adding-a-connector.md
 	new file:   docs/onboarding/adding-a-portal-view.md
 	new file:   docs/onboarding/creating-a-module.md
 	new file:   docs/operations/ci-cd/README.md
 	new file:   docs/operations/ci-cd/branch-protection.md
 	new file:   docs/operations/ci-cd/troubleshooting.md
 	new file:   docs/operations/monitoring/alerts/capsule-slo.yml
 	new file:   docs/operations/monitoring/alerts/nexus-slo.yml
 	new file:   docs/operations/monitoring/alerts/odyssey-slo.yml
 	new file:   docs/operations/monitoring/alerts/plato-slo.yml
 	new file:   docs/operations/monitoring/dashboards/butterfly-ecosystem-overview.json
 	new file:   docs/operations/runbooks/connector-failures.md
 	new file:   docs/operations/runbooks/dlq-replay.md
 	new file:   docs/operations/runbooks/slo-breach.md
 	new file:   docs/reference/README.md
 	new file:   docs/reference/changelog.md
 	new file:   docs/reference/faq.md
 	new file:   docs/reference/glossary.md
 	new file:   docs/security/hardening.md
 	new file:   docs/security/vulnerability-management.md

--- a/.github/workflows/butterfly-e2e.yml
+++ b/.github/workflows/butterfly-e2e.yml
@@ -54,6 +54,26 @@ jobs:
           chmod +x butterfly-e2e/run-scenarios.sh scripts/dev-up.sh scripts/dev-down.sh
           ./butterfly-e2e/run-scenarios.sh
 
+      - name: Generate E2E Summary
+        if: always()
+        run: |
+          echo "## Butterfly E2E Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Build Metrics" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Run ID | [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) |" >> $GITHUB_STEP_SUMMARY
+          echo "| Trigger | \`${{ github.event_name }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Branch | \`${{ github.head_ref || github.ref_name }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| Commit | \`${{ github.sha }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Scenarios Executed" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- Golden path integration" >> $GITHUB_STEP_SUMMARY
+          echo "- Negative scenarios (Kafka hiccup)" >> $GITHUB_STEP_SUMMARY
+          echo "- ODYSSEY reflex assertions" >> $GITHUB_STEP_SUMMARY
+
   full-stack-smoke:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.full_stack == 'true'
     needs: scenario-suite
