--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -186,15 +186,17 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Semgrep
-        # Sprint C: Remove || true to fail on security findings
+        # Fail on HIGH/CRITICAL security findings
         run: |
           semgrep scan \
             --config auto \
             --config p/java \
             --config p/security-audit \
             --config p/secrets \
+            --config p/owasp-top-ten \
             --sarif --output results.sarif \
-            --error
+            --error \
+            --severity ERROR
 
       - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
@@ -202,11 +204,157 @@ jobs:
         with:
           sarif_file: results.sarif
 
+  # =============================================================================
+  # OWASP ZAP DAST Scanning
+  # =============================================================================
+  dast-zap:
+    name: OWASP ZAP DAST
+    runs-on: ubuntu-latest
+    # Run DAST on main/develop branches and PRs (but not on every commit)
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    services:
+      perception-api:
+        image: ghcr.io/${{ github.repository }}/perception-api:test
+        ports:
+          - 8080:8080
+        env:
+          SPRING_PROFILES_ACTIVE: test
+          JWT_SECRET: test-secret-key-for-dast-scanning-only-32-chars
+          DATABASE_URL: jdbc:h2:mem:testdb
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Wait for API to be ready
+        run: |
+          for i in {1..30}; do
+            if curl -s http://localhost:8080/actuator/health | grep -q "UP"; then
+              echo "API is ready"
+              exit 0
+            fi
+            echo "Waiting for API... attempt $i"
+            sleep 5
+          done
+          echo "API failed to start"
+          exit 1
+
+      - name: OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.11.0
+        with:
+          target: 'http://localhost:8080'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a -j -l WARN'
+          fail_action: true
+          allow_issue_writing: false
+
+      - name: OWASP ZAP API Scan
+        uses: zaproxy/action-api-scan@v0.7.0
+        with:
+          target: 'http://localhost:8080/api-docs'
+          format: openapi
+          rules_file_name: '.zap/api-rules.tsv'
+          cmd_options: '-a -l WARN'
+          fail_action: true
+          allow_issue_writing: false
+
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: zap-report
+          path: |
+            zap_baseline_report.html
+            zap_api_report.html
+          retention-days: 30
+
+  # =============================================================================
+  # SonarQube Analysis (requires SONAR_TOKEN secret)
+  # =============================================================================
+  sonarqube:
+    name: SonarQube Analysis
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required for SonarQube blame info
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: |
+          mvn -B verify sonar:sonar \
+            -Dsonar.projectKey=butterfly-perception \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.coverage.jacoco.xmlReportPaths=**/target/site/jacoco/jacoco.xml \
+            -DskipTests=false
+        continue-on-error: ${{ github.event_name == 'pull_request' }}
+
+  # =============================================================================
+  # Frontend Security Scan (npm audit + Snyk)
+  # =============================================================================
+  frontend-security:
+    name: Frontend Security Scan
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: PERCEPTION/perception-portal
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: PERCEPTION/perception-portal/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run npm audit
+        run: npm audit --audit-level=high
+        continue-on-error: true
+
+      - name: Run Snyk security scan
+        uses: snyk/actions/node@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
+          args: --severity-threshold=high --file=PERCEPTION/perception-portal/package.json
+
+      - name: Upload Snyk results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: snyk.sarif
+        continue-on-error: true
+
   # Summary Report
   security-summary:
     name: Security Summary
     runs-on: ubuntu-latest
-    needs: [codeql, dependency-check, secret-scan, license-check, semgrep]
+    needs: [codeql, dependency-check, secret-scan, license-check, semgrep, dast-zap, sonarqube, frontend-security]
     if: always()
     steps:
       - name: Security Scan Summary
@@ -220,3 +368,18 @@ jobs:
           echo "| Secret Scanning | ${{ needs.secret-scan.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| License Compliance | ${{ needs.license-check.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Semgrep SAST | ${{ needs.semgrep.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| OWASP ZAP DAST | ${{ needs.dast-zap.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| SonarQube | ${{ needs.sonarqube.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Frontend Security | ${{ needs.frontend-security.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Remediation SLAs" >> $GITHUB_STEP_SUMMARY
+          echo "- **Critical**: 24 hours" >> $GITHUB_STEP_SUMMARY
+          echo "- **High**: 72 hours" >> $GITHUB_STEP_SUMMARY
+          echo "- **Medium**: 14 days" >> $GITHUB_STEP_SUMMARY
+          echo "- **Low**: 30 days" >> $GITHUB_STEP_SUMMARY
+
+      - name: Fail if critical issues
+        if: needs.codeql.result == 'failure' || needs.dependency-check.result == 'failure' || needs.semgrep.result == 'failure' || needs.dast-zap.result == 'failure'
+        run: |
+          echo "::error::Critical security issues detected. Please review and remediate before merging."
+          exit 1
