--- a/pom.xml
+++ b/pom.xml
@@ -199,11 +199,21 @@
                 <version>${springdoc.version}</version>
             </dependency>
 
-            <!-- OpenTelemetry -->
+            <!-- OpenTelemetry Dependencies for Cross-Service Tracing -->
             <dependency>
                 <groupId>io.opentelemetry</groupId>
                 <artifactId>opentelemetry-api</artifactId>
                 <version>${opentelemetry.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-exporter-otlp</artifactId>
+                <version>${opentelemetry.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-tracing-bridge-otel</artifactId>
+                <version>1.2.0</version>
             </dependency>
 
             <!-- Testing -->
